kubernetes/homework5/deployment-homework5.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
spec:
  replicas: 1
  strategy:
   type: RollingUpdate
   rollingUpdate:
    maxSurge: 0
    maxUnavailable: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - image: postgres:10.13
        name: postgresql
        ports:
        - containerPort: 5432
          protocol: TCP
#        resources:
#          requests:
#            cpu: 100m
#            memory: 100Mi
#          limits:
#            cpu: 100m
#            memory: 100Mi
# Можно секрет передать через переменную окружения, как сделано здесь, а можно через configmap, см пример ниже
#        volumeMounts:
#        - name: config
#          mountPath: /etc/nginx/conf.d/
#      volumes:
#      - name: config
#        configMap:
#          name: my-configmap
